# zERC20

./: .env.example  .gitignore  .gitmodules  COPYRIGHT  Cargo.toml  README.md  dfx.json  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: vercel-arb-op-deploy.yaml  vercel-bsc-deploy.yaml
api-types/: Cargo.toml
api-types/src/: lib.rs
cli/: .env.example  Cargo.toml
cli/src/: main.rs
cli/src/commands/: invoice.rs  mod.rs  private_transfer.rs  receive_transfer.rs  scan_receive_transfers.rs  shared.rs  teleport.rs  transfer.rs
cli/src/proof/: batch.rs  single.rs
client-common/: Cargo.toml
client-common/abi/: Verifier.json
client-common/src/: lib.rs  tokens.rs
client-common/src/contracts/: error.rs  hub.rs  minter.rs  mod.rs  utils.rs  verifier.rs  z_erc20.rs
client-common/src/indexer/: mod.rs
client-common/src/payment/: burn_address.rs  invoice.rs  mod.rs  seed.rs
client-common/src/prover/: mod.rs
client-common/src/teleport/: aggregation_tree.rs  events.rs  merkle_proofs.rs  mod.rs
config/: tokens.example.json
contracts/: .env.example  README.md  foundry.toml  layerzero_deployments.json  run-set-peers.sh
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  DeployMinter.s.sol  SetPeers.s.sol
contracts/script/utils/: DeterministicDeploy.sol
contracts/src/: Hub.sol  Minter.sol  Verifier.sol  zERC20.sol
contracts/src/interfaces/: IDecider.sol  IMintableBurnableERC20.sol  IVerifier.sol  IzERC20.sol
contracts/src/utils/: GeneralRecipientLib.sol  PoseidonAggregationConfig.sol  PoseidonAggregationLib.sol  ShaHashChainLib.sol
contracts/src/utils/layerzero/: OAppCoreUpgradeable.sol  OAppReceiverUpgradeable.sol  OAppSenderUpgradeable.sol  OAppUpgradeable.sol
contracts/src/verifiers/: RootNovaDecider.sol  WithdrawGlobalGroth16Verifier.sol  WithdrawGlobalNovaDecider.sol  WithdrawLocalGroth16Verifier.sol  WithdrawLocalNovaDecider.sol
contracts/test/: Hub.t.sol  Verifier.t.sol  zERC20.t.sol  zERC20Gas.t.sol
contracts/test/utils/: PoseidonAggregationLib.t.sol  TestHelperOz5.sol
crosschain-job/: .env.example  Cargo.toml  README.md
crosschain-job/src/: main.rs
decider-prover/: .env.example  Cargo.toml
decider-prover/src/: circuits.rs  config.rs  errors.rs  lib.rs  main.rs  queue.rs  worker.rs
docker/: crosschain-job.Dockerfile  decider-prover-entrypoint.sh  decider-prover.Dockerfile  indexer-entrypoint.sh  indexer.Dockerfile  nova-artifacts.sh
docker/postgres/: create_databases.sql
docs/: architecture.md  contract_spec.md  overview.md  payment.md  zkp_spec.md
docs/zstorage/: deployment_guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: global.d.ts
frontend/src/app/: App.tsx
frontend/src/app/providers/: AppProviders.tsx  WalletProvider.tsx
frontend/src/app/styles/: global.css
frontend/src/assets/wasm/: zkerc20_wasm.d.ts  zkerc20_wasm.js  zkerc20_wasm_bg.wasm.d.ts
frontend/src/components/: Tabs.tsx
frontend/src/config/: ConfigContext.tsx  appConfig.ts
frontend/src/features/: index.ts
frontend/src/features/minter/: MinterPanel.tsx
frontend/src/features/privateReceive/: PrivateReceivePanel.tsx
frontend/src/features/privateSend/: PrivateSendPanel.tsx
frontend/src/features/redeem/: RedeemDetailSection.tsx  RedeemProgressModal.tsx  redeemMessages.tsx  redeemSteps.ts  yieldToUi.ts
frontend/src/features/scanInvoices/: ScanInvoicesPanel.tsx
frontend/src/hooks/: useAsyncTask.ts  useSeed.ts
frontend/src/services/clients/: index.ts
frontend/src/state/: storageStore.ts
frontend/src/types/: app.ts  qrcode.d.ts
frontend/src/utils/: accountKey.ts  explorer.ts  format.ts  teleportProofs.ts  wallet.ts
indexer/: .env.example  Cargo.toml  README.md
indexer/migrations/: 20251017153344_initial.sql  20251018120000_merkle_trees.sql  20251018160500_leases.sql  20251018173000_root_prover.sql
indexer/src/: config.rs  lib.rs  main.rs
indexer/src/events/: mod.rs
indexer/src/jobs/: event.rs  lock.rs  mod.rs  root.rs  tree.rs
indexer/src/server/: mod.rs
indexer/src/trees/: db.rs  mod.rs
indexer/tests/: event_indexer.rs  jobs_smoke.rs  merkle_tree.rs
indexer/tests/common/: anvil.rs  mod.rs
scripts/: copy_abis.sh  copy_nova_verifiers.sh  encode-tokens.sh  setup-frontend.sh  setup-sdk.sh
sdk/: package.json  tsconfig.json
sdk/src/: constants.ts  index.test.ts  index.ts  sdk.test.ts  sdk.ts  types.ts
sdk/src/decider/: prover.ts
sdk/src/ic/: authorization.ts  connections.ts  encryption.ts  invoice.ts  recipient.ts
sdk/src/indexer/: index.ts
sdk/src/onchain/: contracts.ts
sdk/src/operations/: invoice.ts  minter.ts  novaProver.ts  novaProver.worker.ts  privateSend.ts  receive.ts  scanner.ts  teleport.ts  transfer.ts
sdk/src/registry/: tokens.ts
sdk/src/stores/: storageStore.ts
sdk/src/types/: poseidon-lite.d.ts
sdk/src/utils/: hex.ts  http.ts  merkle.ts  seed.ts
sdk/src/wasm/: artifacts.ts  index.ts
sdk/src/workers/: zkp.worker.ts
sdk/src/zkp/: index.ts  proofService.ts  proofUtils.ts  runtime.ts  worker.ts  workerClient.ts
wasm/: Cargo.toml  README.md
wasm/scripts/: build-wasm.sh
wasm/src/: aggregation.rs  burn.rs  lib.rs  teleport.rs  tokens.rs  utils.rs  withdraw.rs
wasm/tests/: single_withdraw_wasm.rs  withdraw_wasm.rs
zkp/: Cargo.toml
zkp/benches/: decider_bench.rs  proof_bench.rs
zkp/src/: lib.rs  test_utils.rs
zkp/src/circuits/: burn_address.rs  constants.rs  mod.rs  root_transition.rs  withdraw.rs
zkp/src/groth16/: mod.rs  params.rs  withdraw.rs
zkp/src/nova/: constants.rs  mod.rs  params.rs  root_nova.rs  withdraw_nova.rs
zkp/src/utils/: convertion.rs  general_recipient.rs  mod.rs
zkp/src/utils/poseidon/: circom.rs  gadgets.rs  mod.rs  utils.rs
zkp/src/utils/tree/: bit_path.rs  incremental_merkle_tree.rs  merkle_tree.rs  mod.rs
zkp/src/utils/tree/gadgets/: hash_chain.rs  leaf_hash.rs  merkle.rs  mod.rs
zstorage/frontend/: Cargo.toml
zstorage/frontend/tests/: pocket_ic_flow.rs
(+46 files in other folders)
