[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
client-common = { path = "../client-common" }
zkp = { path = "../zkp" }
api-types = { path = "../api-types" }
stealth_client = { path = "../zstorage/frontend" }
ic-agent = { workspace = true }
candid = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
key_manager = { path = "../zstorage/backend/key_manager" }
storage = { path = "../zstorage/backend/storage" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
num-bigint = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
reqwest = { workspace = true }
folding-schemes = { workspace = true }
ark-serialize = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
