[package]
name = "client-common"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
ark-bn254 = { workspace = true, default-features = false }
zkp = { path = "../zkp", default-features = false }
rand = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
api-types = { path = "../api-types" }
url = { workspace = true }
