[package]
name = "crosschain-job"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
client-common = { path = "../client-common" }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
