[package]
name = "decider-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
envy = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
folding-schemes = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-serialize = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zkp = { path = "../zkp" }
tokio = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
deadpool-redis = { version = "0.15.0", features = ["serde"] }
api-types = { path = "../api-types" }
