[package]
name = "tree-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
envy = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
folding-schemes = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-serialize = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
toml = "0.8.19"
async-trait = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
zkp = { path = "../zkp" }
tokio = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
actix-cors = { workspace = true }
client-common = { path = "../client-common" }
api-types = { path = "../api-types" }
