[package]
name = "zkerc20-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
zkp = { path = "../zkp", default-features = false }
hex = { workspace = true }
folding-schemes = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
alloy = { workspace = true }
client-common = { path = "../client-common" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-time = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]
